--- a/style.css
+++ b/style.css
@@ -279,6 +279,17 @@ html img, body img {
     width: 90%;
     height: 270px;
   }
+  .card .new p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #99E2D0;
+    color: #1b6150;
+    width: 25%;
+    height: 4%;
+    position: absolute;
+    right: 8vw;
+  }
   .card p {
     font-weight: 800;
     font-size: 4vw;
