--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,13 +35,18 @@ html, body {
     align-content: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 60px;
     padding-top: 10px;
     background-color: rgba(190, 190, 190, 0.397) ;
-   
-    i.fas{
-        margin-right: 2vw;
-    }
+    padding-left: 5vw;
+        input{
+            margin-left: 3vw;
+            border: none;
+            background-color: rgba(233, 233, 233, 0.486);
+            &::placeholder{
+                font-size: 5vw;
+            }
+        }
 }
 
 .first-container-wrapper{
