--- a/style.css
+++ b/style.css
@@ -101,12 +101,18 @@ html img, body img {
     align-content: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 60px;
     padding-top: 10px;
     background-color: rgba(190, 190, 190, 0.397);
+    padding-left: 5vw;
   }
-  .place i.fas {
-    margin-right: 2vw;
+  .place input {
+    margin-left: 3vw;
+    border: none;
+    background-color: rgba(233, 233, 233, 0.486);
+  }
+  .place input::placeholder {
+    font-size: 5vw;
   }
 
   .first-container-wrapper {
