--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,24 +82,7 @@ h1{
     width: 80%;
     
 }
-.explorer
-{
-    color: floralwhite;
-    font-weight: bold;
-    width: 50%;
-    height:11vw;
-    border-radius: 20px;
-    border:none;
-    align-self: center;
-    @include grad;
-    
-    &:hover{
-           @include hoverbtn;
-            
-        }
-    
-    
-}
+ @import "./components/btn";
     /*-------------------FONCTIONNEMENT-------------------*/
     h2{
         font-size: 5vw;
