--- a/sass/style2.scss
+++ b/sass/style2.scss
@@ -18,9 +18,13 @@ html, body {
     /*---------------------------------REGLES MIXIN VARIABLES------------------*/
     @import "./utils/mixin";
     @import "./utils/variables";
-    @import "./components/btn";
-    /*----------------------------------------HEADER---------------------------------------------------------*/
+    
+    /*----------------------------------------LAYOUT---------------------------------------------------------*/
     @import "./layout/header2.scss";
+    @import "./layout/footer";
+  
+    /*------------------------------COMPONENTS-----------------------*/
+   @import "./components/btn";
 
 /*-----------------BANNIERE----------------------------*/
     
@@ -207,7 +211,7 @@ html, body {
     }  
      
 /*-------------------------------------------FOOTER----------------------------------------*/
-    @import "./layout/footer";
+    ;
     .end{
         padding-top: 30px;
     }
