--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,7 +10,10 @@
 
     h3{
         margin: 0;
-        margin-left: 9vw;
+        margin-left: 5vw;
+        img{
+            transform: scale(0.8);
+        }
         
     }
    
