--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,31 @@ html, body {
 @import "./utils/variables";
 @import "./utils/mixin";
 
+
+@import "./components/loader.scss";
+
+
+ @import "./layout/header.scss";
+ @import "./pages/home/head.scss";
+ @import "./components/btn";
+
+ @import "./pages/home/fonctionnement";
+
+
+ @import "./pages/home/resto";
+
+    @import "./layout/footer";
+
+}
+
+/*---------------------------------------MEDIA QUERIES TABLETTE------------------------------------------*/
+
+
+@media (min-width: 499px) and (max-width: 769px)
+{
+    @import "./utils/variables";
+@import "./utils/mixin";
+
   /*-------------------- LOADING -----------------------*/
 
 @import "./components/loader.scss";
@@ -43,8 +68,10 @@ html, body {
             margin-left: 3vw;
             border: none;
             background-color: rgba(233, 233, 233, 0.486);
+            
             &::placeholder{
-                font-size: 5vw;
+                font-size: 4vw;
+                
             }
         }
 }
@@ -194,9 +221,21 @@ h1{
 
     .image{
         width: 100%;
-        height: 200px;
+        height: 150px;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
+    }
+    .first-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 100%;
+        
+        
+    }
+    .second-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 100%;
     }
 
     .card{
@@ -207,8 +246,14 @@ h1{
         margin-left: 4vw;
         border-radius: 20px;
         background-color: white;
-        width: 90%;
+        width: 100%;
         height: 270px;
+        margin: 1.5vw;
+        button{
+            @include heartbtn;
+            right: 3vw;
+            flex-direction: row;
+        }
 
         .new{
             p{
@@ -217,16 +262,15 @@ h1{
             justify-content: center;
             background-color: $tertiary;
             color: darken($tertiary, $amount: 50);
-            width: 25%;
+            width: 20%;
             height: 4%;
             position: absolute;
-            right: 8vw;
             }
         }
         
         p{
             font-weight: 800;
-            font-size: 4vw;
+            font-size: 3vw;
             margin:0;
             margin-left: 3vw;
             margin-top: 15px;
@@ -236,7 +280,7 @@ h1{
             font-weight: 500;
             color: rgb(107, 107, 107);
             margin-top: 1vw;
-            font-size: 3.5vw;
+            font-size: 2.9vw;
             width: 70%;
             padding-bottom: 5vw;
         }
@@ -244,13 +288,12 @@ h1{
         .figcap{
             display: flex;
             flex-direction: column;
+            
 
             p{
                 width: 70%;
             }
-           .heart{
-            @include heartbtn;
-           }
+           
               
         }
     }
