--- a/style.css
+++ b/style.css
@@ -17,6 +17,347 @@ html img, body img {
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
   /*---------------------------------REGLES MIXIN VARIABLES------------------*/
+  .loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #d8d2df;
+    z-index: 999;
+    transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+    animation: backload 2s ease forwards;
+  }
+  .loader-container .loader {
+    width: 60px;
+    height: 60px;
+    border: 5px solid #e4e4e4;
+    border-radius: 50%;
+    border-top: 5px solid #99E2D0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    animation: loader 0.5s ease infinite;
+  }
+  @keyframes backload {
+    0% {
+      opacity: 1;
+      visibility: visible;
+    }
+    80% {
+      opacity: 0.98;
+      visibility: visible;
+    }
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+  @keyframes loader {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+
+  header {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 10px 16px;
+    height: 40px;
+    width: 100%;
+    border-bottom-color: rgba(58, 58, 58, 0.288);
+    border-bottom-style: solid;
+    padding-top: 20px;
+  }
+  header i.fas {
+    display: none;
+  }
+  header span {
+    display: block;
+    width: 20px;
+    margin-right: 65px;
+  }
+
+  #head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .logo {
+    height: 10vw;
+    margin-right: 90px;
+  }
+
+  .place {
+    color: #585858;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+    padding-top: 10px;
+    background-color: rgba(190, 190, 190, 0.397);
+    padding-left: 5vw;
+  }
+  .place input {
+    margin-left: 3vw;
+    border: none;
+    background-color: rgba(233, 233, 233, 0.486);
+  }
+  .place input::placeholder {
+    font-size: 4vw;
+  }
+
+  .first-container-wrapper {
+    background-color: rgba(233, 233, 233, 0.486);
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+
+  h1 {
+    padding-top: 10px;
+    font-size: 4.5vw;
+    display: flex;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    width: 49vw;
+    margin: 0;
+    margin-top: 10px;
+  }
+  h1 p {
+    margin: 0;
+    padding: 0;
+  }
+
+  .sub {
+    display: inline-block;
+    text-align: center;
+    color: #636363;
+    width: 80%;
+  }
+
+  .explorer {
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height: 11vw;
+    border-radius: 20px;
+    border: none;
+    align-self: center;
+    background: linear-gradient(#FF79DA, #9356DC);
+  }
+  .explorer:hover {
+    filter: brightness(125%);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+    transform: scale(1.05);
+  }
+
+  h2 {
+    font-size: 5vw;
+    font-weight: 700;
+    margin-left: 3vw;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+
+  ol {
+    list-style: none;
+    counter-reset: item;
+  }
+
+  .top {
+    position: relative;
+    list-style-type: none;
+    counter-increment: item;
+    background-color: rgba(233, 233, 233, 0.486);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    border-radius: 20px;
+    width: 70%;
+    height: 60px;
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10vw;
+  }
+  .top:before {
+    position: absolute;
+    color: white;
+    content: counter(item);
+    height: 20px;
+    width: 20px;
+    vertical-align: top;
+    text-align: center;
+    background: #9356DC;
+    border-radius: 20px;
+    margin-right: 63vw;
+  }
+  .top i.fa {
+    color: #9b9b9b;
+    margin-right: 3vw;
+  }
+  .top i.fas {
+    color: #9b9b9b;
+    margin-right: 3vw;
+  }
+  .top:hover {
+    background-color: #f2eafb;
+  }
+  .top:hover i.fas, .top:hover i.fa {
+    color: #9356DC;
+  }
+
+  h3 {
+    font-size: 5vw;
+    font-weight: 700;
+    margin-left: 3vw;
+    padding-top: 30px;
+  }
+
+  .thrid-container {
+    background-color: rgba(233, 233, 233, 0.486);
+    padding-bottom: 30px;
+  }
+  .thrid-container a {
+    color: black;
+    text-decoration: none;
+  }
+
+  .image {
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    margin-left: 4vw;
+    border-radius: 20px;
+    background-color: white;
+    width: 90%;
+    height: 270px;
+  }
+  .card .new p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #99E2D0;
+    color: #1b6150;
+    width: 25%;
+    height: 4%;
+    position: absolute;
+    right: 8vw;
+  }
+  .card p {
+    font-weight: 800;
+    font-size: 4vw;
+    margin: 0;
+    margin-left: 3vw;
+    margin-top: 15px;
+    width: 70%;
+  }
+  .card .subtitles {
+    font-weight: 500;
+    color: #6b6b6b;
+    margin-top: 1vw;
+    font-size: 3.5vw;
+    width: 70%;
+    padding-bottom: 5vw;
+  }
+  .card .figcap {
+    display: flex;
+    flex-direction: column;
+  }
+  .card .figcap p {
+    width: 70%;
+  }
+  .card .figcap .heart {
+    font-size: 7vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 10vw;
+    height: 15vw;
+    width: 9vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .card .figcap .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .card .figcap .heart i.far:hover {
+    opacity: 0;
+  }
+  .card .figcap .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card .figcap .heart i.fas:hover {
+    font-size: 7vw;
+    transition: 400ms;
+    opacity: 1;
+    background-clip: text;
+  }
+
+  .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  .end a {
+    color: white;
+    text-decoration: none;
+  }
+  .end h3 {
+    margin: 0;
+    margin-left: 5vw;
+  }
+  .end h3 img {
+    transform: scale(0.8);
+  }
+  .end li {
+    list-style: none;
+    margin: 5px;
+    color: white;
+  }
+  .end i.fas {
+    color: white;
+    margin-right: 10px;
+  }
+}
+/*---------------------------------------MEDIA QUERIES TABLETTE------------------------------------------*/
+@media (min-width: 499px) and (max-width: 769px) {
   /*-------------------- LOADING -----------------------*/
   .loader-container {
     position: fixed;
@@ -41,8 +382,12 @@ html img, body img {
     animation: loader 0.5s ease infinite;
   }
   @keyframes backload {
+    0% {
+      opacity: 1;
+      visibility: visible;
+    }
     80% {
-      opacity: 0.75;
+      opacity: 0.98;
       visibility: visible;
     }
     100% {
@@ -112,7 +457,7 @@ html img, body img {
     background-color: rgba(233, 233, 233, 0.486);
   }
   .place input::placeholder {
-    font-size: 5vw;
+    font-size: 4vw;
   }
 
   .first-container-wrapper {
@@ -270,9 +615,21 @@ html img, body img {
 
   .image {
     width: 100%;
-    height: 200px;
+    height: 150px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+  }
+
+  .first-cards-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .second-cards-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
   }
 
   .card {
@@ -282,45 +639,12 @@ html img, body img {
     margin-left: 4vw;
     border-radius: 20px;
     background-color: white;
-    width: 90%;
+    width: 100%;
     height: 270px;
+    margin: 1.5vw;
   }
-  .card .new p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #99E2D0;
-    color: #1b6150;
-    width: 25%;
-    height: 4%;
-    position: absolute;
-    right: 8vw;
-  }
-  .card p {
-    font-weight: 800;
-    font-size: 4vw;
-    margin: 0;
-    margin-left: 3vw;
-    margin-top: 15px;
-    width: 70%;
-  }
-  .card .subtitles {
-    font-weight: 500;
-    color: #6b6b6b;
-    margin-top: 1vw;
-    font-size: 3.5vw;
-    width: 70%;
-    padding-bottom: 5vw;
-  }
-  .card .figcap {
-    display: flex;
-    flex-direction: column;
-  }
-  .card .figcap p {
-    width: 70%;
-  }
-  .card .figcap .heart {
-    font-size: 8vw;
+  .card button {
+    font-size: 7vw;
     display: flex;
     justify-content: flex-end;
     position: absolute;
@@ -330,28 +654,64 @@ html img, body img {
     border: none;
     background: rgba(0, 0, 0, 0);
     cursor: pointer;
+    right: 3vw;
+    flex-direction: row;
   }
-  .card .figcap .heart i.far {
+  .card button i.far {
     color: #686565;
     position: absolute;
     top: 4vw;
     opacity: 1;
   }
-  .card .figcap .heart i.far:hover {
+  .card button i.far:hover {
     opacity: 0;
   }
-  .card .figcap .heart i.fas {
+  .card button i.fas {
     opacity: 0;
     position: absolute;
     top: 4vw;
     background: linear-gradient(#FF79DA, #9356DC);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-  .card .figcap .heart i.fas:hover {
-    font-size: 8.5vw;
-    transition: 600ms;
+  .card button i.fas:hover {
+    font-size: 7vw;
+    transition: 400ms;
     opacity: 1;
+    background-clip: text;
+  }
+  .card .new p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #99E2D0;
+    color: #1b6150;
+    width: 20%;
+    height: 4%;
+    position: absolute;
+  }
+  .card p {
+    font-weight: 800;
+    font-size: 3vw;
+    margin: 0;
+    margin-left: 3vw;
+    margin-top: 15px;
+    width: 70%;
+  }
+  .card .subtitles {
+    font-weight: 500;
+    color: #6b6b6b;
+    margin-top: 1vw;
+    font-size: 2.9vw;
+    width: 70%;
+    padding-bottom: 5vw;
+  }
+  .card .figcap {
+    display: flex;
+    flex-direction: column;
+  }
+  .card .figcap p {
+    width: 70%;
   }
 
   /*-------------------------------------------FOOTER----------------------------------------*/
@@ -367,7 +727,10 @@ html img, body img {
   }
   .end h3 {
     margin: 0;
-    margin-left: 9vw;
+    margin-left: 5vw;
+  }
+  .end h3 img {
+    transform: scale(0.8);
   }
   .end li {
     list-style: none;
