--- a/sass/pages/home/_fonctionnement.scss
+++ b/sass/pages/home/_fonctionnement.scss
@@ -1,3 +1,4 @@
+@media (max-width: 498px) {
 h2{
     font-size: 5vw;
     font-weight: 700;
@@ -8,10 +9,12 @@ ul{
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    
 }
 ol{
     list-style: none;
     counter-reset: item;
+    font-size: 4vw;
 
 }
 
@@ -57,6 +60,70 @@ ol{
     i.fas, i.fa{
         color: $primary;
     }
+}
+
+}
+}
+/*---------------------------TABLETTE--------------------------------*/
+@media (min-width: 499px) and (max-width: 769px){
+    h2{
+    font-size: 5vw;
+    font-weight: 700;
+    margin-left: 3vw;
+}
+ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+ol{
+    list-style: none;
+    counter-reset: item;
+    font-size: 3.5vw;
+
+}
+
+.top{ 
+    position: relative;
+    list-style-type: none;
+    counter-increment: item;
+    background-color: rgba(233, 233, 233, 0.486);
+    @include shadows;
+    border-radius: 20px;
+    width: 70%;
+    height: 100px;
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    margin-left: 10vw;
+    
+    &:before{
+        position: absolute;
+        color: rgb(255, 255, 255);
+        content: counter(item);
+        height: 33px;
+        width: 33px;
+        vertical-align: top;
+        text-align: center;
+        background: $primary;
+        border-radius: 20px;
+        margin-right: 63vw;
+    }
+    
+    i.fa, i.fas{
+        color: rgb(155, 155, 155);
+        margin-right: 3vw;
+    }
+
+&:hover{
+    background-color: lighten($primary, 35);
+    i.fas, i.fa{
+        color: $primary;
+    }
+}
+
 }
 
 }
