--- a/sass/components/_heartbtn.scss
+++ b/sass/components/_heartbtn.scss
@@ -1,5 +1,6 @@
 @mixin heartbtn{
-    font-size: 8vw;
+    @media (max-width: 498px){
+    font-size: 7vw;
     display: flex;
     justify-content: flex-end;
     position: absolute;
@@ -30,13 +31,57 @@
         
        
         &:hover{
-            font-size: 8.5vw;
+            font-size: 7vw;
             transition: 600ms;
             opacity: 1;
             
             
         }
-      }   
+      }
+    } 
+      @media (min-width: 499px) and (max-width: 769px){
+        font-size: 5vw;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        position: relative;
+        padding-left: 42vw;
+        height: 10vw;
+        width: 10vw;
+        border: none;
+        background:rgba(0, 0, 0, 0);
+        cursor: pointer;
+        position: absolute;
+        i.far{
+            color: rgb(104, 101, 101);
+            position: relative;
+            top: 4vw;
+            opacity: 1;
+
+            &:hover{
+                opacity: 0;
+            }
+        }
+        i.fas{
+            opacity: 0;
+            position: absolute;
+            top: 4vw;
+            @include grad;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            
+            
+           
+            &:hover{
+                font-size: 5vw;
+                transition: 600ms;
+                opacity: 1;
+                
+                
+            }
+          }
+
+      }  
 }
 
 @mixin heartbtn2{
@@ -70,7 +115,7 @@
         
        
         &:hover{
-            font-size: 8.5vw;
+            font-size: 8vw;
             transition: 600ms;
             opacity: 1;
             
