--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,4 @@
+@media (max-width: 498px){
 .end{
     background-color: rgb(66, 66, 66);
     padding-top: 0;
@@ -27,4 +28,48 @@
         color: white;
         margin-right: 10px;
     }
+}
+}
+@media (min-width: 499px) and (max-width: 769px){
+    .end{
+        background-color: rgb(66, 66, 66);
+        padding-top: 0;
+        margin-top: 0;
+        padding-bottom: 20px;
+        a{
+            color: rgb(255, 255, 255);
+            text-decoration: none;
+        }
+    
+        h3{
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            padding-top: 50px;
+            img{
+                transform: scale(1.5);
+            }
+            
+        }
+        ul{
+        
+            margin-right: 10vw;
+            justify-content: center;
+            align-items: center;
+      
+       
+         li{
+            list-style: none;
+            margin: 5vw;
+            color: white;
+            font-size: 4vw;
+            
+        }
+        i.fas{
+            color: white;
+            margin-right: 10px;
+        }
+    }
+    }
+
 }
