--- a/sass/pages/home/_head.scss
+++ b/sass/pages/home/_head.scss
@@ -1,4 +1,4 @@
-
+@media (max-width: 498px) {
  .place{
     color: rgb(88, 88, 88);
     display: flex;
@@ -9,14 +9,26 @@
     padding-top: 10px;
     background-color: rgba(190, 190, 190, 0.397) ;
     padding-left: 5vw;
+    form{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
         input{
             margin-left: 3vw;
             border: none;
             background-color: rgba(233, 233, 233, 0.486);
+            width: 60%;
+            text-overflow: ellipsis;
+                  
+
             &::placeholder{
                 font-size: 4vw;
             }
         }
+    }
+    
 }
 
 .first-container-wrapper{
@@ -50,5 +62,91 @@ h1{
     text-align: center;
     color: rgb(99, 99, 99);
     width: 80%;
+    font-size: 4vw;
     
 }
+}
+/*---------------------------TABLETTE--------------------------------*/
+@media (min-width: 499px) and (max-width: 769px){
+        .place{
+           color: rgb(88, 88, 88);
+           display: flex;
+           align-content: center;
+           justify-content: center;
+           width: 100%;
+           height: 80px;
+           padding-top: 10px;
+           background-color: rgba(190, 190, 190, 0.397) ;
+           form{
+            height: 60px;
+            width: 90%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            i.fas{
+                font-size: 3vw;
+            }
+         
+           
+               input{
+                   margin-left: 2vw;
+                   border: none;
+                   background-color: rgba(233, 233, 233, 0.486);
+                   height: 60px;
+                   width: 80%;
+                   text-overflow: ellipsis;
+                  
+                   
+                 
+                   &::placeholder{
+                       
+                       font-size: 4vw;
+                   }
+               }
+       }
+    }
+       
+       .first-container-wrapper{
+           background-color: rgba(233, 233, 233, 0.486);
+           display: flex;
+           flex-direction: column;
+           align-self: center;
+           justify-content: center;
+           text-align: center;
+           padding-bottom: 30px;
+       }
+       h1{
+           padding-top: 10px;
+           font-size: 4vw;
+           display: flex;
+           align-self: center;
+           align-content: center;
+           justify-content: center;
+           width: 49vw;
+           margin: 0;
+           margin-top:10px;
+          
+           p{
+           margin: 0;
+           padding: 0;
+       
+           }
+       }
+       .sub{
+           display: inline-block;
+           text-align: center;
+           color: rgb(99, 99, 99);
+           width: 80%;
+           font-size: 3vw;
+           
+       }
+       .explorer{
+           font-size: 3.5vw;
+
+       }
+       }
+       
+
+
