--- a/sass/pages/home/_resto.scss
+++ b/sass/pages/home/_resto.scss
@@ -1,3 +1,4 @@
+@media (max-width: 498px) {
 h3{
     font-size: 5vw;
     font-weight: 700;
@@ -75,5 +76,113 @@ h3{
         @include heartbtn;
        }
           
+    }
+}
+}
+/*---------------------------TABLETTE--------------------------------*/
+@media (min-width: 499px) and (max-width: 769px){
+
+    h3{
+        font-size: 5vw;
+        font-weight: 700;
+        margin-left: 3vw;
+        padding-top: 30px;
+
+    }
+    .thrid-container{
+        background-color: rgba(233, 233, 233, 0.486);
+        padding-bottom: 30px;
+        width: 100%;
+       
+        a{
+            color: black;
+            text-decoration: none;
+
+        }
+    }
+
+    .image{
+        width: 100%;
+        height: 180px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    .first-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 100%;
+        margin:0;
+        
+        
+    }
+    .second-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 100%;
+        
+        margin:0;
+    }
+
+    .card{
+        
+        display: flex;
+        flex-direction: column;
+        @include shadows;
+        margin-left: 4vw;
+        border-radius: 20px;
+        background-color: white;
+        width: 90%;
+        height: 270px;
+        margin: 1.5vw;
+        button{
+            @include heartbtn;
+
+        }
+           
+
+        .new{
+            p{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $tertiary;
+            color: darken($tertiary, $amount: 50);
+            width: 20%;
+            height: 4%;
+            position: absolute;
+            }
+        }
+        
+        p{
+            font-weight: 800;
+            font-size: 3vw;
+            margin:0;
+            margin-left: 3vw;
+            margin-top: 15px;
+            width: 70%;
+        }
+        .subtitles{
+            font-weight: 500;
+            color: rgb(107, 107, 107);
+            margin-top: 1vw;
+            font-size: 2.9vw;
+            width: 70%;
+            position: relative;
+          
+        
+
+        }
+
+        .figcap{
+            display: flex;
+            flex-direction: column;
+            
+
+            p{
+                width: 70%;
+            }
+           
+              
+        }
     }
 }
