--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,291 +13,20 @@ html, body {
     }
 }
 
-  
 
-
-/*-----------------------------------FORMAT MOBILE------------------------------------------------*/
-@media (max-width: 498px) {
-/*---------------------------------REGLES MIXIN VARIABLES------------------*/
 @import "./utils/variables";
 @import "./utils/mixin";
-
-
+@import "./pages/home/fonctionnement";
 @import "./components/loader.scss";
+@import "./components/btn";
+@import "./components/heartbtn";
+@import "./layout/header.scss";
+@import "./pages/home/head.scss";
+@import "./pages/home/resto";
+@import "./layout/footer";
 
 
- @import "./layout/header.scss";
- @import "./pages/home/head.scss";
- @import "./components/btn";
-
- @import "./pages/home/fonctionnement";
 
 
- @import "./pages/home/resto";
 
-    @import "./layout/footer";
-
-}
-
-/*---------------------------------------MEDIA QUERIES TABLETTE------------------------------------------*/
-
-
-@media (min-width: 499px) and (max-width: 769px)
-{
-    @import "./utils/variables";
-@import "./utils/mixin";
-
-  /*-------------------- LOADING -----------------------*/
-
-@import "./components/loader.scss";
-
-/*----------------------------------------HEADER---------------------------------------------------------*/
- @import "./layout/header.scss";
-
- .place{
-    color: rgb(88, 88, 88);
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
-    padding-top: 10px;
-    background-color: rgba(190, 190, 190, 0.397) ;
-    padding-left: 5vw;
-        input{
-            margin-left: 3vw;
-            border: none;
-            background-color: rgba(233, 233, 233, 0.486);
-            
-            &::placeholder{
-                font-size: 4vw;
-                
-            }
-        }
-}
-
-.first-container-wrapper{
-    background-color: rgba(233, 233, 233, 0.486);
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-content: center;
-    text-align: center;
-    padding-bottom: 30px;
-}
-h1{
-    padding-top: 10px;
-    font-size: 4.5vw;
-    display: flex;
-    align-self: center;
-    align-content: center;
-    justify-content: center;
-    width: 49vw;
-    margin: 0;
-    margin-top:10px;
-   
-    p{
-    margin: 0;
-    padding: 0;
-
-    }
-}
-.sub{
-    display: inline-block;
-    text-align: center;
-    color: rgb(99, 99, 99);
-    width: 80%;
-    
-}
- @import "./components/btn";
-    /*-------------------FONCTIONNEMENT-------------------*/
-    h2{
-        font-size: 5vw;
-        font-weight: 700;
-        margin-left: 3vw;
-    }
-    ul{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-    }
-    ol{
-        list-style: none;
-        counter-reset: item;
-
-    }
-
-    .top{ 
-        position: relative;
-        list-style-type: none;
-        counter-increment: item;
-        background-color: rgba(233, 233, 233, 0.486);
-        @include shadows;
-        border-radius: 20px;
-        width: 70%;
-        height: 60px;
-        margin: 15px;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        margin-left: 10vw;
-        
-        &:before{
-            position: absolute;
-            color: rgb(255, 255, 255);
-            content: counter(item);
-            height: 20px;
-            width: 20px;
-            vertical-align: top;
-            text-align: center;
-            background: $primary;
-            border-radius: 20px;
-            margin-right: 63vw;
-        }
-        
-        i.fa{
-            color: rgb(155, 155, 155);
-            margin-right: 3vw;
-        }
-        i.fas{
-            color: rgb(155, 155, 155);
-            margin-right: 3vw;
-
-        }
-    }
-
-    .background{
-        position: relative;
-        list-style-type: none;
-        counter-increment: item;
-        background-color: #9256dc1a;
-        @include shadows;
-        border-radius: 20px;
-        width: 70%;
-        height: 60px;
-        margin: 15px;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        margin-left: 10vw;
-
-        i.fas{
-            color: $primary;
-            margin-right: 3vw;
-    
-        }
-        &:before{
-            position: absolute;
-            color: rgb(255, 255, 255);
-            content: counter(item);
-            height: 20px;
-            width: 20px;
-            vertical-align: top;
-            text-align: center;
-            background: $primary;
-            border-radius: 20px;
-            margin-right: 63vw;
-        }
-    }
-/*------------------RESTAURANTS------------*/
-
-    h3{
-        font-size: 5vw;
-        font-weight: 700;
-        margin-left: 3vw;
-        padding-top: 30px;
-
-    }
-    .thrid-container{
-        background-color: rgba(233, 233, 233, 0.486);
-        padding-bottom: 30px;
-        a{
-            color: black;
-            text-decoration: none;
-
-        }
-    }
-
-    .image{
-        width: 100%;
-        height: 150px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-    }
-    .first-cards-container{
-        display:flex;
-        flex-direction: row;
-        width: 100%;
-        
-        
-    }
-    .second-cards-container{
-        display:flex;
-        flex-direction: row;
-        width: 100%;
-    }
-
-    .card{
-        
-        display: flex;
-        flex-direction: column;
-        @include shadows;
-        margin-left: 4vw;
-        border-radius: 20px;
-        background-color: white;
-        width: 100%;
-        height: 270px;
-        margin: 1.5vw;
-        button{
-            @include heartbtn;
-            right: 3vw;
-            flex-direction: row;
-        }
-
-        .new{
-            p{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: $tertiary;
-            color: darken($tertiary, $amount: 50);
-            width: 20%;
-            height: 4%;
-            position: absolute;
-            }
-        }
-        
-        p{
-            font-weight: 800;
-            font-size: 3vw;
-            margin:0;
-            margin-left: 3vw;
-            margin-top: 15px;
-            width: 70%;
-        }
-        .subtitles{
-            font-weight: 500;
-            color: rgb(107, 107, 107);
-            margin-top: 1vw;
-            font-size: 2.9vw;
-            width: 70%;
-            padding-bottom: 5vw;
-        }
-
-        .figcap{
-            display: flex;
-            flex-direction: column;
-            
-
-            p{
-                width: 70%;
-            }
-           
-              
-        }
-    }
-/*-------------------------------------------FOOTER----------------------------------------*/
-    @import "./layout/footer";
-
-}
+ 
