--- a/style2.css
+++ b/style2.css
@@ -16,9 +16,6 @@ html img, body img {
   object-fit: cover;
 }
 @media (max-width: 498px) {
-  html, body {
-    /*--------------------------------------RECTIFICATION-FOOTER----------------------------------------*/
-  }
   html header, body header {
     background-color: white;
     display: flex;
@@ -66,6 +63,8 @@ html img, body img {
     height: 10vw;
     margin-right: 90px;
   }
+}
+@media (max-width: 498px) and (max-width: 498px) {
   html .end, body .end {
     background-color: #424242;
     padding-top: 0;
@@ -92,6 +91,45 @@ html img, body img {
     color: white;
     margin-right: 10px;
   }
+}
+@media (max-width: 498px) and (min-width: 499px) and (max-width: 769px) {
+  html .end, body .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  html .end a, body .end a {
+    color: white;
+    text-decoration: none;
+  }
+  html .end h3, body .end h3 {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+  html .end h3 img, body .end h3 img {
+    transform: scale(1.5);
+  }
+  html .end ul, body .end ul {
+    display: flex;
+    flex-direction: row;
+    margin-right: 10vw;
+    justify-content: center;
+    align-items: center;
+  }
+  html .end ul li, body .end ul li {
+    list-style: none;
+    margin: 5vw;
+    color: white;
+    font-size: 3vw;
+  }
+  html .end ul i.fas, body .end ul i.fas {
+    color: white;
+    margin-right: 10px;
+  }
+}
+@media (max-width: 498px) {
   html .explorer, body .explorer {
     color: floralwhite;
     font-weight: bold;
@@ -107,11 +145,15 @@ html img, body img {
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
     transform: scale(1.05);
   }
+}
+@media (max-width: 498px) {
   html .overlap, body .overlap {
     width: 100%;
     height: 300px;
     position: absolute;
   }
+}
+@media (max-width: 498px) {
   html .banniere, body .banniere {
     width: 100%;
     height: 300px;
@@ -120,6 +162,8 @@ html img, body img {
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
   }
+}
+@media (max-width: 498px) {
   html .title, body .title {
     background-color: #eeeeee;
     padding-top: 20px;
@@ -181,6 +225,8 @@ html img, body img {
     opacity: 1;
     background-clip: text;
   }
+}
+@media (max-width: 498px) {
   html .first-container, body .first-container {
     background-color: #eeeeee;
   }
@@ -284,6 +330,8 @@ html img, body img {
     top: 7.5vw;
     left: 70vw;
   }
+}
+@media (max-width: 498px) {
   html .select, body .select {
     display: flex;
     justify-content: center;
@@ -291,6 +339,8 @@ html img, body img {
     padding-top: 50px;
     padding-bottom: 50px;
   }
+}
+@media (max-width: 498px) {
   html .end, body .end {
     padding-top: 30px;
   }
