--- a/sass/pages/restaurants/_banniere.scss
+++ b/sass/pages/restaurants/_banniere.scss
@@ -1,5 +1,7 @@
-    
+@media (max-width: 498px) {   
+
 .overlap{
+  
     width: 100%;
     height: 300px;
     position: absolute;
@@ -14,3 +16,24 @@
         animation-timing-function: ease-in-out;
         
     }
+}
+
+/*-----------------------------------TABLETTE-------------*/
+@media (min-width: 497px) and (max-width: 769px){
+    .overlap{
+  
+        width: 100%;
+        height: 400px;
+        position: absolute;
+    }
+    .banniere
+        {
+            width: 100%;
+            height: 400px;
+            position: relative;
+            animation-name: fadein;
+            animation-duration: 1s;
+            animation-timing-function: ease-in-out;
+            
+        }
+}
