--- a/sass/components/_heartbtn.scss
+++ b/sass/components/_heartbtn.scss
@@ -85,6 +85,7 @@
 }
 
 @mixin heartbtn2{
+    @media (max-width: 498px){
     font-size: 8vw;
     display: flex;
     justify-content: flex-end;
@@ -122,4 +123,44 @@
             
         }
       }   
+}
+@media (min-width: 499px) and (max-width: 769px){
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 5.5vw;
+    border: none;
+    background:rgba(0, 0, 0, 0);
+    cursor: pointer;
+    i.far{
+        color: rgb(104, 101, 101);
+        position: absolute;
+        top: 4vw;
+        opacity: 1;
+        &:hover{
+            opacity: 0;
+        }
+    }
+    i.fas{
+        opacity: 0;
+        position: absolute;
+        top: 4vw;
+        @include grad;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+       
+        &:hover{
+            font-size: 8vw;
+            transition: 600ms;
+            opacity: 1;
+            
+            
+        }
+      }    
+}
 }
