--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -1,4 +1,6 @@
+
 header{
+    @media (max-width: 498px){
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
@@ -8,6 +10,7 @@ header{
     height: 40px;
     width: 100%;
     padding-top: 20px;
+    padding-left: 8vw;
             
     a{
         text-decoration: none;
@@ -38,7 +41,7 @@ header{
     span{
         display:block;
         width: 20px;
-        margin-right: 65px;
+        margin-right: 5vw;
     }
 
    
@@ -55,6 +58,75 @@ header{
 
 .logo{
     height: 10vw;
-    margin-right: 90px;
+    margin-right: 30vw;
+    padding-left: 9vw;
+}
+/*---------------------TABLETTE--------------------------------*/
+@media (min-width: 497px) and (max-width: 769px){
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 10px 16px;
+    height: 40px;
+    width: 100%;
+    padding-top: 50px;
+    padding-left: 8vw;
+    padding-bottom:50px ;
+            
+    a{
+        text-decoration: none;
+    &:link{
+        text-decoration: none;
+    }
+    &:visited{
+        text-decoration: none;
+    }
+    &:hover{
+        text-decoration: none;
+    }
+    &:active{
+        text-decoration: none;
+    }
+    }
+    
+
+
+    i.fas{
+        display: block;
+        color: gray;
+        text-decoration: none;
+        font-size: 4vw;
+        
+
+    }
+    
+    span{
+        display:block;
+        width: 20px;
+        margin-right: 5vw;
+    }
+
+   
 
 }
+#head{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+}
+
+.logo{
+    height: 10vw;
+    margin-right: 30vw;
+    padding-left: 9vw;
+}
+
+}
+
+
+
