--- a/style2.css
+++ b/style2.css
@@ -10,13 +10,16 @@ html, body {
   overflow-x: hidden;
   margin: 0;
   background-color: #eeeeee;
-  /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 }
 html img, body img {
   object-fit: cover;
 }
+
+header {
+  /*---------------------TABLETTE--------------------------------*/
+}
 @media (max-width: 498px) {
-  html header, body header {
+  header {
     background-color: white;
     display: flex;
     align-items: center;
@@ -26,135 +29,125 @@ html img, body img {
     height: 40px;
     width: 100%;
     padding-top: 20px;
+    padding-left: 8vw;
   }
-  html header a, body header a {
+  header a {
     text-decoration: none;
   }
-  html header a:link, body header a:link {
+  header a:link {
     text-decoration: none;
   }
-  html header a:visited, body header a:visited {
+  header a:visited {
     text-decoration: none;
   }
-  html header a:hover, body header a:hover {
+  header a:hover {
     text-decoration: none;
   }
-  html header a:active, body header a:active {
+  header a:active {
     text-decoration: none;
   }
-  html header i.fas, body header i.fas {
+  header i.fas {
     display: block;
     color: gray;
     text-decoration: none;
   }
-  html header span, body header span {
+  header span {
     display: block;
     width: 20px;
-    margin-right: 65px;
+    margin-right: 5vw;
   }
-  html #head, body #head {
+}
+header #head {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+header .logo {
+  height: 10vw;
+  margin-right: 30vw;
+  padding-left: 9vw;
+}
+@media (min-width: 497px) and (max-width: 769px) {
+  header {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 10px 16px;
+    height: 40px;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
+    padding-top: 50px;
+    padding-left: 8vw;
+    padding-bottom: 50px;
   }
-  html .logo, body .logo {
-    height: 10vw;
-    margin-right: 90px;
-  }
-}
-@media (max-width: 498px) and (max-width: 498px) {
-  html .end, body .end {
-    background-color: #424242;
-    padding-top: 0;
-    margin-top: 0;
-    padding-bottom: 20px;
-  }
-  html .end a, body .end a {
-    color: white;
+  header a {
     text-decoration: none;
   }
-  html .end h3, body .end h3 {
-    margin: 0;
-    margin-left: 5vw;
-  }
-  html .end h3 img, body .end h3 img {
-    transform: scale(0.8);
-  }
-  html .end li, body .end li {
-    list-style: none;
-    margin: 5px;
-    color: white;
-  }
-  html .end i.fas, body .end i.fas {
-    color: white;
-    margin-right: 10px;
-  }
-}
-@media (max-width: 498px) and (min-width: 499px) and (max-width: 769px) {
-  html .end, body .end {
-    background-color: #424242;
-    padding-top: 0;
-    margin-top: 0;
-    padding-bottom: 20px;
-  }
-  html .end a, body .end a {
-    color: white;
+  header a:link {
     text-decoration: none;
   }
-  html .end h3, body .end h3 {
-    display: flex;
-    justify-content: center;
-    margin: 0;
+  header a:visited {
+    text-decoration: none;
   }
-  html .end h3 img, body .end h3 img {
-    transform: scale(1.5);
+  header a:hover {
+    text-decoration: none;
   }
-  html .end ul, body .end ul {
-    display: flex;
-    flex-direction: row;
-    margin-right: 10vw;
-    justify-content: center;
-    align-items: center;
+  header a:active {
+    text-decoration: none;
   }
-  html .end ul li, body .end ul li {
-    list-style: none;
-    margin: 5vw;
-    color: white;
-    font-size: 3vw;
+  header i.fas {
+    display: block;
+    color: gray;
+    text-decoration: none;
+    font-size: 4vw;
   }
-  html .end ul i.fas, body .end ul i.fas {
-    color: white;
-    margin-right: 10px;
+  header span {
+    display: block;
+    width: 20px;
+    margin-right: 5vw;
   }
 }
-@media (max-width: 498px) {
-  html .explorer, body .explorer {
-    color: floralwhite;
-    font-weight: bold;
-    width: 50%;
-    height: 11vw;
-    border-radius: 20px;
-    border: none;
-    align-self: center;
-    background: linear-gradient(#FF79DA, #9356DC);
-  }
-  html .explorer:hover, body .explorer:hover {
-    filter: brightness(125%);
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
-    transform: scale(1.05);
-  }
+header #head {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
+header .logo {
+  height: 10vw;
+  margin-right: 30vw;
+  padding-left: 9vw;
+}
+
+.explorer {
+  color: floralwhite;
+  font-weight: bold;
+  width: 50%;
+  height: 11vw;
+  border-radius: 40px;
+  border: none;
+  align-self: center;
+  background: linear-gradient(#FF79DA, #9356DC);
+  font-size: 3.5vw;
+}
+.explorer:hover {
+  filter: brightness(125%);
+  box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+  transform: scale(1.05);
+}
+
 @media (max-width: 498px) {
-  html .overlap, body .overlap {
+  .overlap {
     width: 100%;
     height: 300px;
     position: absolute;
   }
-}
-@media (max-width: 498px) {
-  html .banniere, body .banniere {
+
+  .banniere {
     width: 100%;
     height: 300px;
     position: relative;
@@ -163,8 +156,25 @@ html img, body img {
     animation-timing-function: ease-in-out;
   }
 }
+/*-----------------------------------TABLETTE-------------*/
+@media (min-width: 497px) and (max-width: 769px) {
+  .overlap {
+    width: 100%;
+    height: 400px;
+    position: absolute;
+  }
+
+  .banniere {
+    width: 100%;
+    height: 400px;
+    position: relative;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
 @media (max-width: 498px) {
-  html .title, body .title {
+  .title {
     background-color: #eeeeee;
     padding-top: 20px;
     border-top-left-radius: 20px;
@@ -174,7 +184,7 @@ html img, body img {
     margin-top: 250px;
     padding-bottom: 5px;
   }
-  html .title h1, body .title h1 {
+  .title h1 {
     display: flex;
     align-self: center;
     justify-content: space-between;
@@ -186,7 +196,14 @@ html img, body img {
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
   }
-  html .title h1 .heart, body .title h1 .heart {
+  .title h1 .heart {
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
+@media (max-width: 498px) and (max-width: 498px) {
+  .title h1 .heart {
     font-size: 8vw;
     display: flex;
     justify-content: flex-end;
@@ -198,39 +215,72 @@ html img, body img {
     border: none;
     background: rgba(0, 0, 0, 0);
     cursor: pointer;
-    animation-name: fadein;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
   }
-  html .title h1 .heart i.far, body .title h1 .heart i.far {
+  .title h1 .heart i.far {
     color: #686565;
     position: absolute;
     top: 4vw;
     opacity: 1;
   }
-  html .title h1 .heart i.far:hover, body .title h1 .heart i.far:hover {
+  .title h1 .heart i.far:hover {
     opacity: 0;
   }
-  html .title h1 .heart i.fas, body .title h1 .heart i.fas {
+  .title h1 .heart i.fas {
     opacity: 0;
     position: absolute;
     top: 4vw;
     background: linear-gradient(#FF79DA, #9356DC);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-  html .title h1 .heart i.fas:hover, body .title h1 .heart i.fas:hover {
+  .title h1 .heart i.fas:hover {
     font-size: 8vw;
-    transition: 400ms;
+    transition: 600ms;
     opacity: 1;
-    background-clip: text;
+  }
+}
+@media (max-width: 498px) and (min-width: 499px) and (max-width: 769px) {
+  .title h1 .heart {
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 5.5vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 8vw;
+    transition: 600ms;
+    opacity: 1;
   }
 }
 @media (max-width: 498px) {
-  html .first-container, body .first-container {
+  .first-container {
     background-color: #eeeeee;
   }
-  html .first-container .first-container-wrapper h2, html .first-container .first-container-wrapper h2, html .first-container .first-container-wrapper h3, html .first-container .first-container-wrapper h4, body .first-container .first-container-wrapper h2, body .first-container .first-container-wrapper h2, body .first-container .first-container-wrapper h3, body .first-container .first-container-wrapper h4 {
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
     font-size: 5vw;
     color: #777777;
     padding-bottom: 1px;
@@ -241,12 +291,12 @@ html img, body img {
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
   }
-  html .first-container .first-container-wrapper .container, body .first-container .first-container-wrapper .container {
+  .first-container .first-container-wrapper .container {
     position: relative;
     background-color: white;
     border-radius: 20px;
     width: 90%;
-    height: 60px;
+    height: 17vw;
     margin: 20px;
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     display: flex;
@@ -271,27 +321,27 @@ html img, body img {
       opacity: 1;
     }
   }
-  html .first-container .first-container-wrapper .container:hover .check, body .first-container .first-container-wrapper .container:hover .check {
+  .first-container .first-container-wrapper .container:hover .check {
     transition: 0.3s;
     right: 0;
     transition: 500ms ease-in-out;
   }
-  html .first-container .first-container-wrapper .container:hover .check i.fas, body .first-container .first-container-wrapper .container:hover .check i.fas {
+  .first-container .first-container-wrapper .container:hover .check i.fas {
     transform: rotate(360deg);
     transition: 500ms linear;
   }
-  html .first-container .first-container-wrapper .container:hover > .price, body .first-container .first-container-wrapper .container:hover > .price {
+  .first-container .first-container-wrapper .container:hover > .price {
     left: 58vw;
   }
-  html .first-container .first-container-wrapper .container:hover > .sub, body .first-container .first-container-wrapper .container:hover > .sub {
+  .first-container .first-container-wrapper .container:hover > .sub {
     width: 65%;
   }
-  html .first-container .first-container-wrapper .container .check, body .first-container .first-container-wrapper .container .check {
+  .first-container .first-container-wrapper .container .check {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    width: 20%;
+    height: 100%;
     position: absolute;
     right: -100px;
     font-size: 8vw;
@@ -302,24 +352,25 @@ html img, body img {
     color: white;
     background-color: #99E2D0;
   }
-  html .first-container .first-container-wrapper p, body .first-container .first-container-wrapper p {
-    margin: 5px;
+  .first-container .first-container-wrapper p {
+    margin: 1.5vw;
     margin-left: 3vw;
   }
-  html .first-container .first-container-wrapper .bold, body .first-container .first-container-wrapper .bold {
+  .first-container .first-container-wrapper .bold {
+    margin-top: 2vw;
     font-weight: bolder;
     font-size: 4.3vw;
     display: flex;
     justify-content: flex-start;
   }
-  html .first-container .first-container-wrapper .sub, body .first-container .first-container-wrapper .sub {
+  .first-container .first-container-wrapper .sub {
     width: 80%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     font-size: 3.5vw;
   }
-  html .first-container .first-container-wrapper .price, body .first-container .first-container-wrapper .price {
+  .first-container .first-container-wrapper .price {
     font-size: 3vw;
     font-weight: bolder;
     display: flex;
@@ -331,8 +382,222 @@ html img, body img {
     left: 70vw;
   }
 }
+/*-----------------------------------TABLETTE-------------*/
+@media (min-width: 497px) and (max-width: 769px) {
+  .title {
+    background-color: #eeeeee;
+    padding-top: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: relative;
+    width: 100%;
+    margin-top: 350px;
+    padding-bottom: 5px;
+  }
+  .title h1 {
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    margin-left: 3vw;
+    font-family: "Shrikhand", cursive;
+    font-size: 7vw;
+    width: 100%;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+  .title h1 .heart {
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
+@media (min-width: 497px) and (max-width: 769px) and (max-width: 498px) {
+  .title h1 .heart {
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 7vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 8vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 497px) and (max-width: 769px) and (min-width: 499px) and (max-width: 769px) {
+  .title h1 .heart {
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 5.5vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 8vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 497px) and (max-width: 769px) {
+  .first-container {
+    background-color: #eeeeee;
+  }
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
+    font-size: 5vw;
+    color: #777777;
+    padding-bottom: 1px;
+    border-bottom: #99E2D0 solid 2px;
+    width: 10%;
+    margin-left: 6vw;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+  .first-container .first-container-wrapper .container {
+    position: relative;
+    background-color: white;
+    border-radius: 40px;
+    width: 90%;
+    height: 17vw;
+    margin: 20px;
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 1;
+    animation-name: fadein;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 2s;
+    margin-left: 6vw;
+  }
+  @keyframes fadein {
+    0% {
+      opacity: 0;
+    }
+    80% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .first-container .first-container-wrapper .container:hover .check {
+    transition: 0.3s;
+    right: 0;
+    transition: 500ms ease-in-out;
+  }
+  .first-container .first-container-wrapper .container:hover .check i.fas {
+    transform: rotate(360deg);
+    transition: 500ms linear;
+  }
+  .first-container .first-container-wrapper .container:hover > .price {
+    left: 58vw;
+  }
+  .first-container .first-container-wrapper .container:hover > .sub {
+    width: 65%;
+  }
+  .first-container .first-container-wrapper .container .check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    right: -150px;
+    font-size: 8vw;
+    margin-left: 75vw;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    border: none;
+    color: white;
+    background-color: #99E2D0;
+  }
+  .first-container .first-container-wrapper p {
+    margin: 1.5vw;
+    margin-left: 3vw;
+  }
+  .first-container .first-container-wrapper .bold {
+    margin-top: 2vw;
+    font-weight: bolder;
+    font-size: 4.3vw;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .first-container .first-container-wrapper .sub {
+    width: 80%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 3.5vw;
+  }
+  .first-container .first-container-wrapper .price {
+    font-size: 3vw;
+    font-weight: bolder;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    width: 10%;
+    position: absolute;
+    top: 7.5vw;
+    left: 70vw;
+  }
+}
+.select {
+  /*-----------------------------------TABLETTE-------------*/
+}
 @media (max-width: 498px) {
-  html .select, body .select {
+  .select {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -340,9 +605,83 @@ html img, body img {
     padding-bottom: 50px;
   }
 }
+@media (min-width: 497px) and (max-width: 769px) {
+  .select {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+
 @media (max-width: 498px) {
-  html .end, body .end {
-    padding-top: 30px;
+  .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  .end a {
+    color: white;
+    text-decoration: none;
+  }
+  .end h3 {
+    margin: 0;
+    padding-top: 20px;
+    margin-left: 5vw;
+  }
+  .end h3 img {
+    transform: scale(0.8);
+  }
+  .end li {
+    list-style: none;
+    margin: 5px;
+    color: white;
+  }
+  .end i.fas {
+    color: white;
+    margin-right: 10px;
+  }
+}
+/*---------------------TABLETTE--------------------------------*/
+@media (min-width: 497px) and (max-width: 769px) {
+  .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  .end a {
+    color: white;
+    text-decoration: none;
+  }
+  .end h3 {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .end h3 img {
+    transform: scale(1.5);
+  }
+  .end ul {
+    margin-right: 10vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .end ul li {
+    list-style: none;
+    margin: 5vw;
+    color: white;
+    font-size: 4vw;
+  }
+  .end ul i.fas {
+    color: white;
+    margin-right: 10px;
   }
 }
 
