--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -80,3 +80,56 @@
     }
 
 }
+@media (min-width: 770px) {
+    .end{
+        background-color: rgb(66, 66, 66);
+        padding-top: 0;
+        margin-top: 0;
+        padding-bottom: 20px;
+        
+       
+        a{
+            color: rgb(255, 255, 255);
+            text-decoration: none;
+        }
+    
+        h3{
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            padding-top: 150px;
+            padding-bottom: 150px;
+            img{
+                transform: scale(2);
+            }
+            
+        }
+        ul{
+        
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           flex-direction: row;
+           padding-bottom: 150px;
+      
+       
+         li{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            list-style: none;
+            margin: 2vw;
+            color: white;
+            font-size: 2vw;
+            width: 25vw;
+            
+        }
+        i.fas{
+            color: white;
+            margin-right: 10px;
+        }
+    }
+    }
+
+}
