--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -83,3 +83,45 @@
     }
     
 }
+@media (min-width: 770px) {
+    header{
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: row;
+        padding: 10px 16px;
+        height: 8vw;
+        width: 100%;
+        border-bottom-color: rgba(58, 58, 58, 0.288);
+        border-bottom-style: solid;
+        border-width:5px;
+       
+        i.fas{
+            display: none;
+        }
+        
+        span{
+            display:block;
+            width: 20px;
+            margin-right: 65px;
+        }
+    
+       
+    
+    }
+    #head{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    
+    }
+    
+    .logo{
+        height: 4vw;
+        margin-right: 90px;
+    
+    }
+}
