--- a/sass/pages/home/_fonctionnement.scss
+++ b/sass/pages/home/_fonctionnement.scss
@@ -110,6 +110,10 @@ ol{
         background: $primary;
         border-radius: 20px;
         margin-right: 63vw;
+        display: flex;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
     }
     
     i.fa, i.fas{
@@ -125,5 +129,80 @@ ol{
 }
 
 }
+
+}
+@media (min-width: 770px) {
+    h2{
+        font-size: 2vw;
+        font-weight: 700;
+        margin-left: 3vw;
+    }
+    ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+    }
+    ol{
+        list-style: none;
+        counter-reset: item;
+        font-size: 1.5vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+    
+    }
+    
+    .top{ 
+        position: relative;
+        list-style-type: none;
+        counter-increment: item;
+        background-color: rgba(233, 233, 233, 0.486);
+        @include shadows;
+        border-radius: 80px;
+        width:45vw;
+        height: 7vw;
+        margin:2vw;
+        
+        display: flex;
+        align-items:center;
+        padding-right: 2vw;
+        padding-left: 2vw;
+        
+
+        
+        &:before{
+            position: absolute;
+            color: rgb(255, 255, 255);
+            content: counter(item);
+            height: 3vw;
+            width: 3vw;
+            vertical-align: top;
+            text-align: center;
+            background: $primary;
+            border-radius: 80px;
+            left : -1.5vw;
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        i.fa, i.fas{
+            color: rgb(155, 155, 155);
+            margin-left: 4vw;
+            margin-right: 2vw;
+        }
+    
+    &:hover{
+        background-color: lighten($primary, 35);
+        i.fas, i.fa{
+            color: $primary;
+            
+        }
+    }
+    
+    }
 
 }
