--- a/sass/pages/home/_head.scss
+++ b/sass/pages/home/_head.scss
@@ -147,6 +147,107 @@ h1{
 
        }
        }
+       /*---------------------------DASKTOP---------------------*/
+       @media (min-width: 770px) {
+        .place{
+            color: rgb(88, 88, 88);
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            width: 100%;
+            height: 7vw;
+            padding-top: 10px;
+            background-color: rgba(190, 190, 190, 0.397) ;
+            form{
+             height: 60px;
+             width: 100%;
+             display: flex;
+             flex-direction: row;
+             align-items: center;
+             justify-content: center;
+             overflow: hidden;
+             p{
+                 width: 30vw;
+                 height: 60px;
+                 display: flex;
+                 flex-direction: row;
+                 align-content: center;
+                 justify-content: center;
+                 padding-top: 50px;
+
+             }
+             
+             
+             i.fas{
+                 font-size: 2vw;
+             }
+          
+            
+                input{
+                    
+                    margin-left: 2vw;
+                   border: none;
+                   background-color: rgba(233, 233, 233, 0.486);
+                   height: 60px;
+                   width: 80%;
+                   text-overflow: ellipsis;
+                 
+                   
+                    
+                  
+                    &::placeholder{
+                        
+                        font-size: 2vw;
+                      
+                    }
+                }
+        }
+     }
+        
+        .first-container-wrapper{
+            background-color: rgba(233, 233, 233, 0.486);
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            justify-content: center;
+            text-align: center;
+            padding-bottom: 40px;
+            padding-top: 10px;
+        }
+        h1{
+            padding-top: 10px;
+            font-size: 2vw;
+            display: flex;
+            align-self: center;
+            align-content: center;
+            justify-content: center;
+            width: 49vw;
+            margin: 0;
+            margin-top:10px;
+           
+            p{
+            margin: 0;
+            padding: 0;
+        
+            }
+        }
+        .sub{
+            display: inline-block;
+            text-align: center;
+            color: rgb(99, 99, 99);
+            width: 80%;
+            font-size: 2vw;
+            
+        }
+        .explorer{
+            font-size: 2vw;
+            height: 5vw;
+            width: 30vw;
+ 
+        }
+        
+
+       }
        
 
 
