--- a/style2.css
+++ b/style2.css
@@ -684,5 +684,48 @@ header .logo {
     margin-right: 10px;
   }
 }
+@media (min-width: 770px) {
+  .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  .end a {
+    color: white;
+    text-decoration: none;
+  }
+  .end h3 {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+  .end h3 img {
+    transform: scale(2);
+  }
+  .end ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding-bottom: 150px;
+  }
+  .end ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 2vw;
+    color: white;
+    font-size: 2vw;
+    width: 25vw;
+  }
+  .end ul i.fas {
+    color: white;
+    margin-right: 10px;
+  }
+}
 
 /*# sourceMappingURL=style2.css.map */
