--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -17,3 +17,25 @@
     
     
 }
+/*---------------------DESKTOP------------------*/
+@media (min-width: 770px){
+    .explorer
+{
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height:8vw;
+    border-radius: 40px;
+    border:none;
+    align-self: center;
+    @include grad;
+    font-size: 2vw;
+    
+    &:hover{
+           @include hoverbtn;
+            
+        }
+    
+    
+}
+}
