--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -97,10 +97,10 @@
             display: flex;
             justify-content: center;
             margin: 0;
-            padding-top: 150px;
-            padding-bottom: 150px;
+            padding-top: 3vw;
+            padding-bottom: 0.5vw;
             img{
-                transform: scale(2);
+                transform: scale(1);
             }
             
         }
@@ -111,7 +111,7 @@
             justify-content: center;
             align-items: center;
            flex-direction: row;
-           padding-bottom: 150px;
+           padding-bottom: 2vw;
       
        
          li{
@@ -121,7 +121,7 @@
             list-style: none;
             margin: 2vw;
             color: white;
-            font-size: 2vw;
+            font-size: 1vw;
             width: 25vw;
             
         }
