--- a/sass/pages/home/_head.scss
+++ b/sass/pages/home/_head.scss
@@ -147,39 +147,44 @@ h1{
 
        }
        }
-       /*---------------------------DASKTOP---------------------*/
+       /*---------------------------DESKTOP---------------------*/
        @media (min-width: 770px) {
         .place{
-            color: rgb(88, 88, 88);
             display: flex;
-            align-content: center;
+            flex-direction: row;
+            align-items: center;
             justify-content: center;
+            overflow: hidden;
+            color: rgb(88, 88, 88);
             width: 100%;
-            height: 7vw;
-            padding-top: 10px;
+            height: 6vw;
             background-color: rgba(190, 190, 190, 0.397) ;
             form{
-             height: 60px;
              width: 100%;
              display: flex;
              flex-direction: row;
              align-items: center;
              justify-content: center;
              overflow: hidden;
+             
+             
              p{
                  width: 30vw;
-                 height: 60px;
+                 height: 5vw;
                  display: flex;
                  flex-direction: row;
                  align-content: center;
                  justify-content: center;
-                 padding-top: 50px;
+                 padding-top: 2vw;
+                 margin-bottom: 6.5vw;
+                 
 
              }
              
              
              i.fas{
                  font-size: 2vw;
+                 margin-left: 3vw;
              }
           
             
@@ -188,10 +193,17 @@ h1{
                     margin-left: 2vw;
                    border: none;
                    background-color: rgba(233, 233, 233, 0.486);
-                   height: 60px;
+                   height: 5vw;
                    width: 80%;
+                   padding-bottom: 1vw;
                    text-overflow: ellipsis;
-                 
+                   padding-top: 2vw;
+                   flex-direction: row;
+                   align-items: center;
+                   justify-content: center;
+                   display: flex;
+                   
+                
                    
                     
                   
