--- a/sass/pages/home/_resto.scss
+++ b/sass/pages/home/_resto.scss
@@ -186,3 +186,117 @@ h3{
         }
     }
 }
+/*----------------------------DESKTOP---------------------*/
+@media (min-width: 770px) {
+    h3{
+        font-size: 2vw;
+        font-weight: 700;
+        margin-left: 3vw;
+        padding-top: 30px;
+
+    }
+    .thrid-container{
+        background-color: rgba(233, 233, 233, 0.486);
+        padding-bottom: 30px;
+        width: 100%;
+       
+        a{
+            color: black;
+            text-decoration: none;
+
+        }
+    }
+
+    .image{
+        width: 100%;
+        height: 17vw;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    .bigcontainer{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    .first-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 50%;
+        margin:0;
+        
+        
+    }
+    .second-cards-container{
+        display:flex;
+        flex-direction: row;
+        width: 50%;
+        
+        margin:0;
+    }
+
+    .card{
+        
+        display: flex;
+        flex-direction: column;
+        @include shadows;
+        margin-left: 4vw;
+        border-radius: 20px;
+        background-color: white;
+        width: 98%;
+        height: 25vw;
+        margin: 1vw;
+        button{
+            @include heartbtn;
+
+        }
+           
+
+        .new{
+            p{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $tertiary;
+            color: darken($tertiary, $amount: 50);
+            width:16%;
+            height: 2vw;
+            position: absolute;
+            font-weight: 1vw;
+            }
+        }
+        
+        p{
+            font-weight: 800;
+            font-size: 1.5vw;
+            margin:0;
+            margin-left: 3vw;
+            margin-top: 15px;
+            width: 70%;
+        }
+        .subtitles{
+            font-weight: 500;
+            color: rgb(107, 107, 107);
+            margin-top: 1vw;
+            font-size: 1.2vw;
+            width: 70%;
+            position: relative;
+          
+        
+
+        }
+
+        .figcap{
+            display: flex;
+            flex-direction: column;
+            
+
+            p{
+                width: 70%;
+            }
+           
+              
+        }
+    }
+}
