--- a/style.css
+++ b/style.css
@@ -14,6 +14,87 @@ html img, body img {
   object-fit: cover;
 }
 
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #d8d2df;
+  z-index: 999;
+  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+  animation: backload 2s ease forwards;
+}
+.loader-container .loader {
+  width: 60px;
+  height: 60px;
+  border: 5px solid #e4e4e4;
+  border-radius: 50%;
+  border-top: 5px solid #99E2D0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: loader 0.5s ease infinite;
+}
+@keyframes backload {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  80% {
+    opacity: 0.98;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes loader {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+.explorer {
+  color: floralwhite;
+  font-weight: bold;
+  width: 50%;
+  height: 11vw;
+  border-radius: 40px;
+  border: none;
+  align-self: center;
+  background: linear-gradient(#FF79DA, #9356DC);
+  font-size: 3.5vw;
+}
+.explorer:hover {
+  filter: brightness(125%);
+  box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+  transform: scale(1.05);
+}
+
+/*---------------------DESKTOP------------------*/
+@media (min-width: 770px) {
+  .explorer {
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height: 8vw;
+    border-radius: 40px;
+    border: none;
+    align-self: center;
+    background: linear-gradient(#FF79DA, #9356DC);
+    font-size: 2vw;
+  }
+  .explorer:hover {
+    filter: brightness(125%);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+    transform: scale(1.05);
+  }
+}
 @media (max-width: 498px) {
   h2 {
     font-size: 5vw;
@@ -170,13 +251,12 @@ html img, body img {
     background-color: rgba(233, 233, 233, 0.486);
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     border-radius: 80px;
-    width: 45vw;
-    height: 7vw;
-    margin: 2vw;
+    width: 40vw;
+    height: 5vw;
+    margin: 1.5vw;
+    padding-right: 1vw;
     display: flex;
     align-items: center;
-    padding-right: 2vw;
-    padding-left: 2vw;
   }
   .top:before {
     position: absolute;
@@ -206,68 +286,6 @@ html img, body img {
     color: #9356DC;
   }
 }
-.loader-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #d8d2df;
-  z-index: 999;
-  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-  animation: backload 2s ease forwards;
-}
-.loader-container .loader {
-  width: 60px;
-  height: 60px;
-  border: 5px solid #e4e4e4;
-  border-radius: 50%;
-  border-top: 5px solid #99E2D0;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  animation: loader 0.5s ease infinite;
-}
-@keyframes backload {
-  0% {
-    opacity: 1;
-    visibility: visible;
-  }
-  80% {
-    opacity: 0.98;
-    visibility: visible;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-@keyframes loader {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(360deg);
-  }
-}
-
-.explorer {
-  color: floralwhite;
-  font-weight: bold;
-  width: 50%;
-  height: 11vw;
-  border-radius: 40px;
-  border: none;
-  align-self: center;
-  background: linear-gradient(#FF79DA, #9356DC);
-  font-size: 3.5vw;
-}
-.explorer:hover {
-  filter: brightness(125%);
-  box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
-  transform: scale(1.05);
-}
-
 @media (max-width: 498px) {
   header {
     background-color: white;
@@ -514,20 +532,20 @@ html img, body img {
     font-size: 3.5vw;
   }
 }
-/*---------------------------DASKTOP---------------------*/
+/*---------------------------DESKTOP---------------------*/
 @media (min-width: 770px) {
   .place {
-    color: #585858;
     display: flex;
-    align-content: center;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
+    overflow: hidden;
+    color: #585858;
     width: 100%;
-    height: 7vw;
-    padding-top: 10px;
+    height: 6vw;
     background-color: rgba(190, 190, 190, 0.397);
   }
   .place form {
-    height: 60px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -537,23 +555,31 @@ html img, body img {
   }
   .place form p {
     width: 30vw;
-    height: 60px;
+    height: 5vw;
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 2vw;
+    margin-bottom: 6.5vw;
   }
   .place form i.fas {
     font-size: 2vw;
+    margin-left: 3vw;
   }
   .place form input {
     margin-left: 2vw;
     border: none;
     background-color: rgba(233, 233, 233, 0.486);
-    height: 60px;
+    height: 5vw;
     width: 80%;
+    padding-bottom: 1vw;
     text-overflow: ellipsis;
+    padding-top: 2vw;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    display: flex;
   }
   .place form input::placeholder {
     font-size: 2vw;
@@ -743,6 +769,46 @@ html img, body img {
     opacity: 1;
   }
 }
+@media (max-width: 498px) and (min-width: 770px) {
+  .card .figcap .heart {
+    font-size: 2vw;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    padding-left: 18vw;
+    height: 10vw;
+    width: 5vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+  }
+  .card .figcap .heart i.far {
+    color: #686565;
+    position: relative;
+    top: 3vw;
+    left: 2vw;
+    opacity: 1;
+  }
+  .card .figcap .heart i.far:hover {
+    opacity: 0;
+  }
+  .card .figcap .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 3vw;
+    left: 19vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card .figcap .heart i.fas:hover {
+    font-size: 2vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
 /*---------------------------TABLETTE--------------------------------*/
 @media (min-width: 499px) and (max-width: 769px) {
   h3 {
@@ -869,6 +935,46 @@ html img, body img {
     opacity: 1;
   }
 }
+@media (min-width: 499px) and (max-width: 769px) and (min-width: 770px) {
+  .card button {
+    font-size: 2vw;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    padding-left: 18vw;
+    height: 10vw;
+    width: 5vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+  }
+  .card button i.far {
+    color: #686565;
+    position: relative;
+    top: 3vw;
+    left: 2vw;
+    opacity: 1;
+  }
+  .card button i.far:hover {
+    opacity: 0;
+  }
+  .card button i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 3vw;
+    left: 19vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card button i.fas:hover {
+    font-size: 2vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
 @media (min-width: 499px) and (max-width: 769px) {
   .card .new p {
     display: flex;
@@ -902,6 +1008,222 @@ html img, body img {
   }
 }
 @media (min-width: 499px) and (max-width: 769px) {
+  .card .figcap {
+    display: flex;
+    flex-direction: column;
+  }
+  .card .figcap p {
+    width: 70%;
+  }
+}
+/*----------------------------DESKTOP---------------------*/
+@media (min-width: 770px) {
+  h3 {
+    font-size: 2vw;
+    font-weight: 700;
+    margin-left: 3vw;
+    padding-top: 30px;
+  }
+
+  .thrid-container {
+    background-color: rgba(233, 233, 233, 0.486);
+    padding-bottom: 30px;
+    width: 100%;
+  }
+  .thrid-container a {
+    color: black;
+    text-decoration: none;
+  }
+
+  .image {
+    width: 100%;
+    height: 17vw;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  .bigcontainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .first-cards-container {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    margin: 0;
+  }
+
+  .second-cards-container {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    margin: 0;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    margin-left: 4vw;
+    border-radius: 20px;
+    background-color: white;
+    width: 98%;
+    height: 25vw;
+    margin: 1vw;
+  }
+}
+@media (min-width: 770px) and (max-width: 498px) {
+  .card button {
+    font-size: 7vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 10vw;
+    height: 15vw;
+    width: 9vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .card button i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .card button i.far:hover {
+    opacity: 0;
+  }
+  .card button i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card button i.fas:hover {
+    font-size: 7vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) and (min-width: 499px) and (max-width: 769px) {
+  .card button {
+    font-size: 5vw;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    padding-left: 42vw;
+    height: 10vw;
+    width: 10vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+  }
+  .card button i.far {
+    color: #686565;
+    position: relative;
+    top: 4vw;
+    opacity: 1;
+  }
+  .card button i.far:hover {
+    opacity: 0;
+  }
+  .card button i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card button i.fas:hover {
+    font-size: 5vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) and (min-width: 770px) {
+  .card button {
+    font-size: 2vw;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    position: relative;
+    padding-left: 18vw;
+    height: 10vw;
+    width: 5vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+  }
+  .card button i.far {
+    color: #686565;
+    position: relative;
+    top: 3vw;
+    left: 2vw;
+    opacity: 1;
+  }
+  .card button i.far:hover {
+    opacity: 0;
+  }
+  .card button i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 3vw;
+    left: 19vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card button i.fas:hover {
+    font-size: 2vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) {
+  .card .new p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #99E2D0;
+    color: #1b6150;
+    width: 16%;
+    height: 2vw;
+    position: absolute;
+    font-weight: 1vw;
+  }
+}
+@media (min-width: 770px) {
+  .card p {
+    font-weight: 800;
+    font-size: 1.5vw;
+    margin: 0;
+    margin-left: 3vw;
+    margin-top: 15px;
+    width: 70%;
+  }
+}
+@media (min-width: 770px) {
+  .card .subtitles {
+    font-weight: 500;
+    color: #6b6b6b;
+    margin-top: 1vw;
+    font-size: 1.2vw;
+    width: 70%;
+    position: relative;
+  }
+}
+@media (min-width: 770px) {
   .card .figcap {
     display: flex;
     flex-direction: column;
@@ -994,18 +1316,18 @@ html img, body img {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 3vw;
+    padding-bottom: 0.5vw;
   }
   .end h3 img {
-    transform: scale(2);
+    transform: scale(1);
   }
   .end ul {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    padding-bottom: 150px;
+    padding-bottom: 2vw;
   }
   .end ul li {
     display: flex;
@@ -1014,7 +1336,7 @@ html img, body img {
     list-style: none;
     margin: 2vw;
     color: white;
-    font-size: 2vw;
+    font-size: 1vw;
     width: 25vw;
   }
   .end ul i.fas {
