--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -125,8 +125,68 @@ header{
     margin-right: 30vw;
     padding-left: 9vw;
 }
+/*------------------DESKTOP----------------------*/
+@media (min-width: 770px) {
+    background-color: rgb(255, 255, 255);
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: row;
+        padding: 10px 16px;
+        height: 8vw;
+        width: 100%;
+        border-bottom-color: rgba(58, 58, 58, 0.288);
+        border-bottom-style: solid;
+        border-width:5px;
+            
+    a{
+        text-decoration: none;
+    &:link{
+        text-decoration: none;
+    }
+    &:visited{
+        text-decoration: none;
+    }
+    &:hover{
+        text-decoration: none;
+    }
+    &:active{
+        text-decoration: none;
+    }
+    }
+    
+
+
+    i.fas{
+        display: block;
+        color: gray;
+        text-decoration: none;
+        font-size: 4vw;
+        
+
+    }
+    
+    span{
+        display:block;
+        width: 20px;
+        margin-right: 65px;
+    }
+
+   
+
+}
+#head{
+    width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
 
 }
 
-
+.logo{
+    height: 4vw;
+        margin-right: 90px;
+}
+}
 
